feat(index.css): added list increment styles for 'about' section; feat(About): added about section layout; feat(ListItem): added reuseable list item component; feat(Header, App): padding fix; feat:(Charts): padding and h1/h3 font fix; feat(StartedButton): shadow fix;

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,16 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+/* LIST INCREMENT */
+.about ul {
+  counter-reset: item;
+}
+
+.about li {
+  counter-increment: item;
+}
+
+.about li::before {
+  content: counter(item, decimal-leading-zero);
+}
