feat(index.css): added styles for carousel functionality; feat(About): fix width, replaced h with Heading component; feat(Charts): fix width; feat(Reviews): added layout; feat(Heading): added new reusable component; feat(handleScroll): func to handle review carousel scroll;

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,14 @@ html {
 .about li::before {
   content: counter(item, decimal-leading-zero);
 }
+
+/* REVIEW CAROUSEL */
+.review__carousel {
+  @apply w-full overflow-x-auto;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: visible;
+}
+.review__carousel::-webkit-scrollbar {
+  display: none;
+}
